# poetry-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/poetry_demo/: __init__.py
tests/: test_poetry_demo.py
